--- a/app/src/main/res/layout/activity_raportit.xml
+++ b/app/src/main/res/layout/activity_raportit.xml
@@ -17,8 +17,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:minHeight="?actionBarSize"
-            android:padding="@dimen/appbar_padding"
-            android:text="@string/app_name"
+            android:text="Palaute"
             android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
 
         <com.google.android.material.tabs.TabLayout
