--- a/app/src/main/res/layout/activity_kysely.xml
+++ b/app/src/main/res/layout/activity_kysely.xml
@@ -11,6 +11,13 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical">
+
+           
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
@@ -20,8 +27,8 @@
             android:text="Kysely"
             android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
 
+        </LinearLayout>
     </com.google.android.material.appbar.AppBarLayout>
-
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
