--- a/app/src/main/res/layout/activity_kysely.xml
+++ b/app/src/main/res/layout/activity_kysely.xml
@@ -6,29 +6,14 @@
     android:layout_height="match_parent"
    >
 
-    <com.google.android.material.appbar.AppBarLayout
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/kysely_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical">
-
-
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:minHeight="?actionBarSize"
-            android:text="Kysely"
-            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
-
-        </LinearLayout>
-    </com.google.android.material.appbar.AppBarLayout>
-
+        android:background="?attr/colorPrimary"
+        android:minHeight="@dimen/action_bar_size"
+        android:theme="?attr/actionBarTheme"
+        app:layout_anchor="@+id/kysely_toolbar"
+        app:layout_anchorGravity="center" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
