--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,17 @@
             android:text="Tulokset"
             android:textColor="#FFFFFF"
             android:textSize="18sp" />
+
+        <ImageView
+            android:id="@+id/logo1"
+            android:layout_width="160dp"
+            android:layout_height="135dp"
+            android:layout_gravity="bottom|left"
+            android:src="@drawable/logo1" />
+        
+        //vielä loput imageviewit ja asettelut logoille tähän
+
     </LinearLayout>
 
 </RelativeLayout>
+
