--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,18 +35,19 @@
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_marginTop="50dp"
+            android:layout_marginBottom="50dp"
             android:background="#86B404"
             android:text="Tulokset"
             android:textColor="#FFFFFF"
             android:textSize="18sp" />
 
         <ImageView
-            android:id="@+id/logo1"
-            android:layout_width="160dp"
-            android:layout_height="135dp"
-            android:layout_gravity="bottom|left"
-            android:src="@drawable/logo1" />
-        
+            android:id="@+id/logot"
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="bottom|center"
+            android:src="@drawable/logot" />
+
         //vielä loput imageviewit ja asettelut logoille tähän
 
     </LinearLayout>
